<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2022. Explore in HMS. All rights reserved. Licensed under the Apache License, Version 2.0 (the "License") you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0. Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dirtyWhite"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/login_icon"
        android:src="@drawable/ic_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-50dp"
        android:fontFamily="@font/muli_regular"
        android:text="@string/welcome_to_PhotographyApp"
        android:textColor="#696969"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/muli_regular"
        android:text="@string/login_and_start_to_edit_your_photos"
        android:textAlignment="center"
        android:textColor="#696969" />

    <com.huawei.hms.support.hwid.ui.HuaweiIdAuthButton
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="70dp"
        android:gravity="center" />

    <ProgressBar
        android:id="@+id/pbSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp" />

</LinearLayout>

